force-app/main/default/objects/Tax_Questionnaire__c/Tax_Questionnaire__c.object-meta.xml
<CustomObject>
    <description>This object is part of compliance project and Tax Questionnaire should always be linked with case record.</description>
    <label>Questionnaire</label>
    <nameField>
        <displayFormat>TQ-{0000000}</displayFormat>
        <label>Tax Questionnaire Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Questionnaire</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>