force-app/main/default/objects/Tax_Questionnaire__c/fields/AF1099_File_Encryption_Requirement_Notes__c.field-meta.xml
<CustomField>
    <fullName>AF1099_File_Encryption_Requirement_Notes__c</fullName>
    <label>File Encryption Requirement Notes</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>