force-app/main/default/objects/Tax_Questionnaire__c/fields/AF1099_Is_State_Reporting_Link_Resource__c.field-meta.xml
<CustomField>
    <fullName>AF1099_Is_State_Reporting_Link_Resource__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link/Resource</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>