force-app/main/default/objects/Tax_Questionnaire__c/fields/AFW2_File_Encryption_Requirement_L_R__c.field-meta.xml
<CustomField>
    <fullName>AFW2_File_Encryption_Requirement_L_R__c</fullName>
    <label>Link/Resource</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>