force-app/main/default/objects/Tax_Questionnaire__c/fields/AFW2_File_Encryption_Requirements__c.field-meta.xml
<CustomField>
    <fullName>AFW2_File_Encryption_Requirements__c</fullName>
    <label>File Encryption Requirements?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>