force-app/main/default/objects/Tax_Questionnaire__c/fields/Allowed_Amendment_Scenarios_and_Fields__c.field-meta.xml
<CustomField>
    <fullName>Allowed_Amendment_Scenarios_and_Fields__c</fullName>
    <description>Allowed Amendment Scenarios and Fields</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Allowed Amendment Scenarios and Fields</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>