force-app/main/default/objects/Tax_Questionnaire__c/fields/Changes_To_Requirements_In_LOI_MOU__c.field-meta.xml
<CustomField>
    <fullName>Changes_To_Requirements_In_LOI_MOU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Changes To Requirements in LOI/MOU</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>