force-app/main/default/objects/Tax_Questionnaire__c/fields/Custom_EIN_Format_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Custom_EIN_Format_if_applicable__c</fullName>
    <description>Custom EIN Format (if applicable)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Custom EIN Format (if applicable)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>