force-app/main/default/objects/Tax_Questionnaire__c/fields/Data_Element_Changes__c.field-meta.xml
<CustomField>
    <fullName>Data_Element_Changes__c</fullName>
    <label>Data Element Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
            <value>
                <fullName>Y</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>