force-app/main/default/objects/Tax_Questionnaire__c/fields/Date_Updated_in_CMS__c.field-meta.xml
<CustomField>
    <fullName>Date_Updated_in_CMS__c</fullName>
    <description>Date Updated in CMS?</description>
    <label>Date Updated in CMS?</label>
    <type>Date</type>
</CustomField>