force-app/main/default/objects/Tax_Questionnaire__c/fields/Deposit_Frequency_Default_if_allowed__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Frequency_Default_if_allowed__c</fullName>
    <description>Deposit Frequency Default (if allowed)</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Deposit Frequency Default (if allowed)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>