force-app/main/default/objects/Tax_Questionnaire__c/fields/Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>TextArea</type>
</CustomField>