force-app/main/default/objects/Tax_Questionnaire__c/fields/EIN_Format_Match_Gusto_Formats_In_CMS__c.field-meta.xml
<CustomField>
    <fullName>EIN_Format_Match_Gusto_Formats_In_CMS__c</fullName>
    <label>EIN Format-Match &quot;Gusto Formats in CMS&quot;</label>
    <length>255</length>
    <type>Text</type>
</CustomField>