force-app/main/default/objects/Tax_Questionnaire__c/fields/Filing_Due_Date_Changes__c.field-meta.xml
<CustomField>
    <fullName>Filing_Due_Date_Changes__c</fullName>
    <label>Filing Due Date Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>