force-app/main/default/objects/Tax_Questionnaire__c/fields/Final_W2_DueDate_For_ClosedAccounts_Note__c.field-meta.xml
<CustomField>
    <fullName>Final_W2_DueDate_For_ClosedAccounts_Note__c</fullName>
    <label>Final W2 DueDate For ClosedAccounts Note</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>