force-app/main/default/objects/Tax_Questionnaire__c/fields/Fixed_Tax_Sur_Taxable_Wage_Base_Limit__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Tax_Sur_Taxable_Wage_Base_Limit__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Taxable Wage Base Limit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>