force-app/main/default/objects/Tax_Questionnaire__c/fields/Gusto_s_Generic_Form_Acceptance__c.field-meta.xml
<CustomField>
    <fullName>Gusto_s_Generic_Form_Acceptance__c</fullName>
    <description>Gusto&apos;s Generic Form Acceptance</description>
    <label>Gusto&apos;s Generic Form Acceptance</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No, Form Saved in Drive</fullName>
            </value>
            <value>
                <fullName>Form Saved in Drive</fullName>
                <isActive>false</isActive>
                <label>Form Saved in Drive</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>