force-app/main/default/objects/Tax_Questionnaire__c/fields/Holiday_Weekend_Deposit_Rule__c.field-meta.xml
<CustomField>
    <fullName>Holiday_Weekend_Deposit_Rule__c</fullName>
    <label>Holiday/Weekend Deposit Rule</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>