force-app/main/default/objects/Tax_Questionnaire__c/fields/Information_To_Update_In_The_Articles__c.field-meta.xml
<CustomField>
    <fullName>Information_To_Update_In_The_Articles__c</fullName>
    <label>Information to Update in the Articles</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>