force-app/main/default/objects/Tax_Questionnaire__c/fields/LHC_Ticket_JIRA__c.field-meta.xml
<CustomField>
    <fullName>LHC_Ticket_JIRA__c</fullName>
    <description>LHC Ticket/JIRA</description>
    <encryptionScheme>None</encryptionScheme>
    <label>LHC Ticket/JIRA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>