force-app/main/default/objects/Tax_Questionnaire__c/fields/New_Employer_Rate_L_R__c.field-meta.xml
<CustomField>
    <fullName>New_Employer_Rate_L_R__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Link/Resource</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>