force-app/main/default/objects/Tax_Questionnaire__c/fields/New_Employer_Rate_Text__c.field-meta.xml
<CustomField>
    <fullName>New_Employer_Rate_Text__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>New Employer Rate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>