force-app/main/default/objects/Tax_Questionnaire__c/fields/Reporting_Changes__c.field-meta.xml
<CustomField>
    <fullName>Reporting_Changes__c</fullName>
    <label>Reporting Changes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>