force-app/main/default/objects/Tax_Questionnaire__c/fields/Standard_Occupational_Code_SOC_L_R__c.field-meta.xml
<CustomField>
    <fullName>Standard_Occupational_Code_SOC_L_R__c</fullName>
    <label>Link/Resource</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>