force-app/main/default/objects/Tax_Questionnaire__c/fields/Standard_Occupational_Codes_SOC__c.field-meta.xml
<CustomField>
    <fullName>Standard_Occupational_Codes_SOC__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Standard Occupational Codes (SOC)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>