force-app/main/default/objects/Tax_Questionnaire__c/fields/STE_Code__c.field-meta.xml
<CustomField>
    <fullName>STE_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>STE Code(s)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>