force-app/main/default/objects/Tax_Questionnaire__c/fields/Tax_Collector__c.field-meta.xml
<CustomField>
    <fullName>Tax_Collector__c</fullName>
    <description>Tax Collector</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Tax Collector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>