force-app/main/default/objects/Tax_Questionnaire__c/fields/Unclaimed_Property_Agencies_L_R__c.field-meta.xml
<CustomField>
    <fullName>Unclaimed_Property_Agencies_L_R__c</fullName>
    <label>Link/Resource</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>