force-app/main/default/objects/Tax_Questionnaire__c/fields/Unit_Reporting_Required_Report_By_Locat__c.field-meta.xml
<CustomField>
    <fullName>Unit_Reporting_Required_Report_By_Locat__c</fullName>
    <label>Unit Reporting Required (Report By Locat</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>