force-app/main/default/objects/Tax_Questionnaire__c/fields/Update_Is_Needed_To_HC_IKB__c.field-meta.xml
<CustomField>
    <fullName>Update_Is_Needed_To_HC_IKB__c</fullName>
    <label>Update Is Needed To HC/IKB</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>N</fullName>
                <isActive>false</isActive>
                <label>N</label>
            </value>
            <value>
                <fullName>Y</fullName>
                <isActive>false</isActive>
                <label>Y</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>