force-app/main/default/objects/Tax_Questionnaire__c/recordTypes/Maintenance_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>Maintenance_Questionnaire</fullName>
    <active>true</active>
    <label>Maintenance Questionnaire</label>
</RecordType>