force-app/main/default/objects/Tax_Questionnaire__c/recordTypes/New_Tax_Questionnaire.recordType-meta.xml
<RecordType>
    <fullName>New_Tax_Questionnaire</fullName>
    <active>true</active>
    <label>New Tax Questionnaire</label>
</RecordType>